# simpleUnixClientServer

./: .gitignore  README.md  compileGCC.sh  compileMe.sh
implementation/: AppProtocol.cpp  AppProtocol.h  CMakeLists.txt  UDS.cpp  UDS.h
implementation/commonLibs/: AppProtocol.cpp  AppProtocol.h  UDS.h
implementation/commonLibs/3dparty/libevent/: HowToCompileLibevent.txt
implementation/commonLibs/3dparty/libevent/libevent-2.1.11-src/: Makefile  config.status  libevent.la  libevent.pc  libevent_core.la  libevent_core.pc  libevent_extra.la  libevent_extra.pc  libevent_openssl.pc  libevent_pthreads.la  libevent_pthreads.pc  libtool
implementation/commonLibs/3dparty/libevent/libevent-2.1.11-src/.deps/: event.Plo  http.Plo
implementation/commonLibs/3dparty/libevent/libevent-2.1.11-src/.libs/: libevent-2.1.so.7.0.0  libevent.lai  libevent_core-2.1.so.7.0.0  libevent_core.lai  libevent_extra-2.1.so.7.0.0  libevent_extra.lai  libevent_pthreads-2.1.so.7.0.0  libevent_pthreads.lai
implementation/commonLibs/3dparty/libevent/libevent-2.1.11-src/sample/: dns-example  event-read-fifo  hello-world  http-connect  http-server  signal-test  time-test
implementation/commonLibs/3dparty/libevent/libevent-2.1.11-src/sample/.deps/: event-read-fifo.Po  http-server.Po
implementation/commonLibs/3dparty/libevent/libevent-2.1.11-src/sample/.libs/: dns-example  event-read-fifo  hello-world  http-connect  http-server  signal-test  time-test
implementation/commonLibs/3dparty/libevent/libevent-2.1.11-src/test/: bench  bench_cascade  bench_http  bench_httpclient  regress  rpcgen-attempted  test-changelist  test-closed  test-dumpevents  test-eof  test-fdleak  test-init  test-ratelim  test-time  test-weof
implementation/commonLibs/3dparty/libevent/libevent-2.1.11-src/test/.deps/: bench.Po  bench_cascade.Po  regress-regress.Po  regress-regress_buffer.Po  regress-regress_bufferevent.Po  regress-regress_dns.Po  regress-regress_et.Po  regress-regress_finalize.Po  regress-regress_http.Po  regress-regress_listener.Po  regress-regress_main.Po  regress-regress_minheap.Po  regress-regress_rpc.Po  regress-regress_testutils.Po  regress-regress_thread.Po  regress-regress_util.Po  regress-regress_zlib.Po  test-changelist.Po  test-init.Po
implementation/commonLibs/3dparty/libevent/libevent-2.1.11-src/test/.libs/: bench  bench_cascade  bench_http  bench_httpclient  regress  test-changelist  test-closed  test-dumpevents  test-eof  test-fdleak  test-init  test-ratelim  test-time  test-weof
implementation/kvctl/: UDSClient.cpp  UDSClient.h  main_kvctl.cpp  main_kvctl2.cpp
implementation/kvctl/old/: UDSClient.cpp
implementation/kvd/: BTree.cpp  BTree.h  Client.cpp  Client.h  Daemon.cpp  Daemon.h  DataBase.cpp  DataBase.h  DataBaseEnums.h  DataBaseStuff.h  QueryResult.cpp  QueryResult.h  Session.cpp  Session.h  SysLogger.cpp  SysLogger.h  UDS.h  UDSServer.cpp  UDSServer.h  UDSServerLibEvent.cpp  UDSServerLibEvent.h  main.cpp  main_kvd.cpp  main_kvd2.cpp  main_kvd3.cpp  main_kvd4.cpp  main_kvd_libevent.cpp
